@@ -3,7 +3,7 @@ Current development team
 Jesse Smith <jessefrgsmith@yahoo.ca> (Development)
 magic-stix (Porting to Windows)
 Fernando Liebana (Spanish translation)
-
+Rick McDaniel (Development)
 
 Original LinuxSSN team, who created the foundation for this project,
 and much of the code, images, etc. Thank you very much!
