@@ -1,3 +1,5 @@
+See if we need to specify SDL_rotozoom.h
+
 We should not see target data on the map screen if we cannot track the target.
 Add up/down thermal depth commands
 
